--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -40,7 +40,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <app-po-documents #poDocument></app-po-documents>
+                    <app-po-documents #poDocument [documentData]="documentList"></app-po-documents>
                 </div>
                 <div class="col-sm-8">
 
