--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -1,8 +1,16 @@
 <div class="row ">
     <mat-card class="example-card">
         <mat-card-header class="upload-documents-mat-header">
-            <app-upload #uploadRef [documentListLength]="documentListLength" (onFileUpdate)="fileUpdate($event)">
-            </app-upload>
+            <span class="text-semi-bold" *ngIf="mode==='edit'; else editBlock">
+                <mat-form-field class="border-input">
+                    <input matInput type="string" formControlName="orderNo" placeholder="Project No." class="m-r-5" />
+                </mat-form-field>
+                <app-upload #uploadRef [documentListLength]="documentListLength" (onFileUpdate)="fileUpdate($event)">
+                </app-upload>
+            </span>
+            <ng-template #editBlock>
+                Download Document
+            </ng-template>
         </mat-card-header>
         <mat-card-content>
             <mat-list class="pt-10">
