--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -62,3 +62,11 @@
 .form-error-msg{
     color: #f44336;
 }
+
+.update-info{
+    // background-image: url('../../images/dashboard-overlay.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 100px 0;
+}
