--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -14,14 +14,29 @@
         </mat-card-header>
         <mat-card-content>
             <mat-list class="pt-10">
-                <mat-list-item class="files-list" *ngFor="let file of documentList; let i = index">
-                    <!-- <mat-icon>file_copy</mat-icon> -->
-                    <img class="file-icon" src="../../../../assets/images/file-doc.png">
-                    <span>{{ file.documentName}}</span>
-                    <button type="button" (click)="removeFile(i)" mat-icon-button>
-                        <mat-icon class="font-size-16">cancel</mat-icon>
-                    </button>
-                </mat-list-item>
+                <span *ngIf="mode!='edit'">
+                    <mat-list-item class="files-list" *ngFor="let file of documentData; let i = index">
+                        <!-- <mat-icon>file_copy</mat-icon> -->
+                        <img class="file-icon" src="../../../../assets/images/file-doc.png">
+                        <span>{{ file.documentName}}</span>
+                        <button type="button" (click)="openFileUrl(i)" mat-icon-button>
+                            <i class="material-icons">
+                                remove_red_eye
+                            </i>
+                        </button>
+                    </mat-list-item>
+                </span>
+                <span *ngIf="mode==='edit'">
+                    <mat-list-item class="files-list" *ngFor="let file of documentList; let i = index">
+                        <!-- <mat-icon>file_copy</mat-icon> -->
+                        <img class="file-icon" src="../../../../assets/images/file-doc.png">
+                        <span>{{ file.documentName}}</span>
+                        <button type="button" (click)="removeFile(i)" mat-icon-button>
+                            <mat-icon class="font-size-16">cancel</mat-icon>
+                        </button>
+                    </mat-list-item>
+                </span>
+
             </mat-list>
         </mat-card-content>
     </mat-card>
