--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -39,17 +39,21 @@
                             <td mat-cell *matCellDef="let element ;let i=index" formGroupName={{i}}>
                                 <mat-checkbox #ch [checked]="element.checked"
                                     (change)="materialChecked(ch,i,p,project.projectId,element)">
-                                    {{ element.materialName }} <br>
-                                    <span class="category-name">
-                                        {{ element.materialGroup}}
-                                    </span>
+                                    <div class="limited-character" matTooltip=" {{ element.materialName }}">
+                                        {{ element.materialName }} <br>
+                                    </div>
+                                    <div class="limited-character" matTooltip=" {{ element.materialGroup }}">
+                                        <span class="category-name">
+                                            {{ element.materialGroup}}
+                                        </span>
+                                    </div>
                                 </mat-checkbox>
                             </td>
                         </ng-container>
                         <ng-container matColumnDef="Required Date">
                             <th mat-header-cell *matHeaderCellDef>Required Date</th>
                             <td mat-cell *matCellDef="let element; let i = index">
-                                {{ element.dueDate }}
+                                {{ element.dueDate|date: "dd-MMM-yyy" }}
                             </td>
                         </ng-container>
                         <ng-container matColumnDef="Requested Quantity">
