--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -34,7 +34,9 @@
                     <ng-container matColumnDef="Material Name">
                         <th mat-header-cell *matHeaderCellDef>Material Name</th>
                         <td mat-cell *matCellDef="let element">
-                            {{ element.materialName }}
+                            <div class="limited-character" matTooltip=" {{ element.materialName }}">
+                                {{ element.materialName }} <br>
+                            </div>
                         </td>
                     </ng-container>
 
@@ -45,11 +47,11 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="Requested Qty">
-                        <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
+                        <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
                         <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
                     </ng-container>
                     <ng-container matColumnDef="Estimated Qty">
-                        <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
+                        <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
                         <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
                     </ng-container>
                     <ng-container matColumnDef="Estimated Rate">
