--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -58,6 +58,15 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="customColumn1">
+            <th mat-header-cell *matHeaderCellDef> Add Supplier</th>
+            <td mat-cell *matCellDef="let element">
+                // <button mat-button class="display-flex pull-right ">
+                    // <mat-icon class="main-color">delete_outline</mat-icon>
+                    // </button>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
