--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -30,29 +30,24 @@
         </mat-card> -->
       </div>
     </div>
-      <div class="row">
-       <div class="col-xs-3">
+    <div class="row">
+      <div class="col-xs-3">
         <mat-form-field class="example-form-field border-input p-l-20">
-          <input
-            matInput
-            placeholder="Search RFQ"
-            type="search"
-           (keyup)="applyFilter($event.target.value)"
-          />
+          <input matInput placeholder="Search RFQ" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
       <div class="col-xs-9">
-           <div class="text-right add-user-details-button-right p-t-10 p-r-20">
-               <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-          [routerLink]="['../../rfq/createRfq']">
-          Create RFQ
-        </button>
-          </div>
+        <div class="text-right add-user-details-button-right p-t-10 p-r-20">
+          <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+            [routerLink]="['../../rfq/createRfq']">
+            Create RFQ
+          </button>
+        </div>
       </div>
-  </div>
+    </div>
 
 
     <div class="rfq-list-detail-custom">
@@ -155,7 +150,7 @@
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Non-Submitted RFQ
+              Non Submitted RFQ
             </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="row">
@@ -166,7 +161,7 @@
               </ng-container>
 
               <ng-container matColumnDef="Raised Date">
-                <th mat-header-cell *matHeaderCellDef>Raised Date"</th>
+                <th mat-header-cell *matHeaderCellDef>Raised Date</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.createdAt | date: "dd MMM yyy" }}
                 </td>
@@ -188,13 +183,14 @@
 
               <ng-container matColumnDef="Total Material">
                 <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Material</th>
-                <td mat-cell *matCellDef="let row" class="text-align-center">
-                  {{ row.materialCount }}
+                <td mat-cell *matCellDef="let element" class="text-align-center">
+                  {{ element.materialCount }}
                 </td>
               </ng-container>
               <ng-container matColumnDef="Total Supplier">
                 <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
                 <td mat-cell *matCellDef="let element" class="text-align-center">
+
 
                   <div class="supplier-qty-div">
                     <div>
@@ -224,22 +220,19 @@
 
                   </div>
 
-
                 </td>
               </ng-container>
               <ng-container matColumnDef="action1">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                   <a [routerLink]="['../rfq-view', element.rfqId]">View RFQ</a>
+                <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
+                <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
+                  <a [routerLink]="['../rfq-view', element.rfqId]">View RFQ</a>
                 </td>
               </ng-container>
               <ng-container matColumnDef="action2">
-                <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                  <!-- <a [routerLink]="['../rfq-view', element.rfqId]">View Bids</a>-->
-                </mat-cell>
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element;let i=index" class="action2" class="text-align-center">
+                </td>
               </ng-container>
-
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
@@ -247,8 +240,5 @@
         </mat-expansion-panel>
       </mat-accordion>
     </div>
-
-
-
   </div>
 </div>
