--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -585,7 +585,7 @@ mat-icon {
     border-bottom: 1px solid #ebe3f5;
 }
 
-addSupplier {
+.addSupplier {
     material-icons {
         font-size: 20px
     }
