--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -3,21 +3,16 @@
     <card-layout *ngIf="projectData" (onEdit)="editProject($event)" (onDelete)="deleteProject($event)"
       [projectDetails]="projectData"></card-layout>
     <div class="row">
-       <div class="col-xs-3">
+      <div class="col-xs-3">
         <mat-form-field class="example-form-field border-input">
-          <input
-            matInput
-            placeholder="Search Materials"
-            type="search"
-           (keyup)="applyFilter($event)"
-          />
+          <input matInput placeholder="Search Materials" type="search" (keyup)="applyFilter($event)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
       <div class="col-xs-9 p-t-10">
-         <span>
+        <span *ngIf="this.permissionObj.rfqFlag">
           <button mat-raised-button class="main-background-color main-button color-white pull-right"
             (click)="createRfq()">
             Create RFQ
@@ -42,13 +37,13 @@
           </button>
         </span>
       </div>
-       
+
     </div>
 
     <div class="row">
       <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="col-sm-12 bom-material-table">
         <ng-container matColumnDef="materialName">
-          <th *matHeaderCellDef  class="first-column-row-header">
+          <th *matHeaderCellDef class="first-column-row-header">
             Material Name
           </th>
           <td class="text-left" mat-cell *matCellDef="let element">
@@ -66,7 +61,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="estimatedQty">
-          <th *matHeaderCellDef  class="text-align-center justify-center">
+          <th *matHeaderCellDef class="text-align-center justify-center">
             Estimated Quantity
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -74,7 +69,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="requestedQuantity">
-          <th *matHeaderCellDef  class="text-align-center justify-center">
+          <th *matHeaderCellDef class="text-align-center justify-center">
             Requested Quantity
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -82,7 +77,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="issueToProject">
-          <th *matHeaderCellDef  class="text-align-center justify-center">
+          <th *matHeaderCellDef class="text-align-center justify-center">
             Issued To Project
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -90,31 +85,34 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="availableStock">
-          <th *matHeaderCellDef  class="text-align-center justify-center">
+          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag" class="text-align-center justify-center">
             Available In Stock
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element">
+          <td class="text-align-center" mat-cell [hidden]="!permissionObj.rfqFlag" *matCellDef="let element">
             {{ element.availableStock }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="customColumn">
-          <th *matHeaderCellDef ></th>
+          <th *matHeaderCellDef></th>
           <td class="text-right p-b-20" mat-cell *matCellDef="let element">
             <!-- <a>
               <mat-icon>edit</mat-icon>
             </a> -->
-          
-            <a (click)="openDialog1(element.materialId,projectId)" class="width-15-px p-r-10 cursor-pointer"  matTooltip="Issue to Indent">
+
+            <a *ngIf="permissionObj.rfqFlag" (click)="openDialog1(element.materialId,projectId)"
+              class="width-15-px p-r-10 cursor-pointer" matTooltip="Issue to Indent">
               <img src="../../../../assets/images/issue_to_indent.png">
-              </a>
-                <a class="width-15-px p-l-5 cursor-pointer"  matTooltip="Delete" *ngIf="!((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0))"
-              (click)="deleteBom(element.materialId,element.projectId,((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0)))">
-               <img src="../../../../assets/images/delete-button.png">
             </a>
-             <a class="width-15-px p-l-5"  *ngIf="((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0))"
+            <a class="width-15-px p-l-5 cursor-pointer" matTooltip="Delete"
+              *ngIf="!((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0))"
               (click)="deleteBom(element.materialId,element.projectId,((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0)))">
-               <img src="../../../../assets/images/delete-button_disable.png">
+              <img src="../../../../assets/images/delete-button.png">
+            </a>
+            <a class="width-15-px p-l-5"
+              *ngIf="((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0))"
+              (click)="deleteBom(element.materialId,element.projectId,((element.requestedQuantity === 0) &&  (element.availableStock===0) && (element.issueToProject===0)))">
+              <img src="../../../../assets/images/delete-button_disable.png">
             </a>
 
           </td>
@@ -128,7 +126,7 @@
               <div class="inner-table mat-elevation-z8 row" *ngIf="expandedElement">
                 <table class="col-sm-12" mat-table [dataSource]="element.materialSpecs">
                   <ng-container matColumnDef="materialName">
-                    <th *matHeaderCellDef >
+                    <th *matHeaderCellDef>
                       Name
                     </th>
                     <td class="text-left" mat-cell *matCellDef="let element">
@@ -143,7 +141,7 @@
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="estimatedQty">
-                    <th *matHeaderCellDef  class="text-align-center">
+                    <th *matHeaderCellDef class="text-align-center">
                       Estimated Quantity
                     </th>
                     <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -151,7 +149,7 @@
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="Requested Quantity">
-                    <th *matHeaderCellDef  class="text-align-center">
+                    <th *matHeaderCellDef class="text-align-center">
                       Requested Material
                     </th>
                     <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -159,7 +157,7 @@
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="issueToProject">
-                    <th *matHeaderCellDef  class="text-align-center">
+                    <th *matHeaderCellDef class="text-align-center">
                       Issued To Project
                     </th>
                     <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -167,7 +165,7 @@
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="availableStock">
-                    <th *matHeaderCellDef  class="text-align-center">
+                    <th *matHeaderCellDef class="text-align-center">
                       Available In Stock
                     </th>
                     <td class="text-align-center" mat-cell *matCellDef="let element">
