--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,3 +19,4 @@
     @import "./pages/card-layout.scss";
     @import "./pages/signin-signup.scss";
     @import "./layout/loader.scss";
+    @import "./pages/indent.scss";
