--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -6,7 +6,7 @@
           [projectDetails]="product"></card-layout>
       </div>
     </div>
-    <div class="row p-t-10 p-b-10">
+    <div class="row p-t-10">
       <div class="col-sm-12">
         <mat-toolbar>
           <span>Ongoing Indent</span>
@@ -15,7 +15,7 @@
     </div>
     <!-- first table structure -->
 
-    <div class="row">
+    <div class="row padding-8 ongoing-indent-tbl">
       <!-- <div class="col-sm-12"> -->
       <!-- table structure -->
       <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8 col-sm-12">
@@ -32,14 +32,14 @@
         <ng-container matColumnDef="Requested Date">
           <th mat-header-cell *matHeaderCellDef>Requested Date</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.createdAt | date }}
+            {{ element.createdAt | date: "dd-MMM-yyy" }}
           </td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="Total No Of Material">
-          <th mat-header-cell *matHeaderCellDef  class="text-align-center">Total No Of Material</th>
-          <td mat-cell *matCellDef="let element"  class="text-align-center">
+          <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
+          <td mat-cell *matCellDef="let element" class="text-align-center">
             {{ element.materialCount }}
           </td>
         </ng-container>
@@ -52,12 +52,12 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="Date">
+        <!-- <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">
             {{ element.createdAt | date }}
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr (click)="viewIndentDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
@@ -69,7 +69,7 @@
     </div>
 
 
-    <div class="row p-t-10 p-b-10">
+    <div class="row p-t-10">
       <div class="col-sm-12">
         <mat-toolbar>
           <span>Completed Indent</span>
@@ -77,7 +77,7 @@
       </div>
     </div>
     <!-- first table structure -->
-    <div class="row">
+    <div class="row padding-8 completed-indent-tbl">
       <!-- <div class="col-sm-12"> -->
       <!-- table structure -->
       <table mat-table [dataSource]="dataSource2" class="mat-elevation-z8 col-sm-12">
@@ -92,16 +92,16 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="Requested Date">
-          <th mat-header-cell *matHeaderCellDef>Requested Date"</th>
+          <th mat-header-cell *matHeaderCellDef>Requested Date</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.createdAt | date }}
+            {{ element.createdAt | date: "dd-MMM-yyy"}}
           </td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="Total No Of Material">
-          <th mat-header-cell *matHeaderCellDef  class="text-align-center">Total No Of Material</th>
-          <td mat-cell *matCellDef="let element"  class="text-align-center">
+          <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
+          <td mat-cell *matCellDef="let element" class="text-align-center">
             {{ element.materialCount }}
           </td>
         </ng-container>
@@ -114,12 +114,12 @@
           </td>
         </ng-container>
 
-        <ng-container matColumnDef="Date">
+        <!-- <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">
             {{ element.createdAt | date }}
           </td>
-        </ng-container>
+        </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr (click)="viewIndentDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
