--- a/src/app/shared/layout/header/header.html
+++ b/src/app/shared/layout/header/header.html
@@ -42,7 +42,7 @@
           <button mat-menu-item class="background-white-color">
             My Account
           </button>
-          <button mat-menu-item class="background-white-color">LogOut</button>
+          <button mat-menu-item class="background-white-color" (click)="logout()" routerLinkActive="router-link-active" >LogOut</button>
         </mat-menu>
       </div>
     </mat-toolbar-row>
