--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -14,7 +14,7 @@
                 <div *ngIf="this.poMode==='requiredApproval'">
                     <button mat-raised-button class="main-background-color main-button color-white m-r-5"
                         (click)="poApproval('rejected')">
-                        Rejected
+                        Reject
                     </button>
                     <button mat-raised-button class="main-background-color main-button color-white "
                         (click)="poApproval('approved')">
