--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -6,18 +6,19 @@
       <mat-card class="parent">
         <div class="row">
           <div class="col-xs-6 text-left">
-            <p>Please select categories to add materials in BOM</p>
+            <p>Please select categories to add materials in Bill of Materials</p>
           </div>
           <div class="col-xs-6 text-right d-flex justify-content-end" appDnd>
             <div class="mr-3">
-              <span> 
+              <span>
                 <img src="assets/images/download.png" alt="download" class="img-fluid mr-2">
-                <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download</a></span>
+                <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Tempelate</a></span>
             </div>
             <div>
               <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload" multiple
                 (change)="uploadExcel($event.target.files)" />
-              <span> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> Excel upload</span>
+              <span> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30"> Upload BOM
+                Tempelate</span>
             </div>
           </div>
         </div>
