--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -12,12 +12,9 @@
       </button>
     </a>
 
-    <mat-card>
+    <!-- <mat-card>
       <div class="row">
-        <!-- <div class="right-pipe" style="width: 20%;">
-          <span class="p-l-30 p-r-20 pull-left">23</span>
-          <span class="pull-left">Low Stock Material</span>
-        </div> -->
+       
         <div class="right-pipe" style="width: 25%;">
           <span class="p-l-10 p-r-20 pull-left">23</span>
           <span class="pull-left">Low Stock Material</span>
@@ -35,13 +32,13 @@
           <span class="pull-left">Low Stock Material</span>
         </div>
       </div>
-    </mat-card>
-  <div class="text-right add-user-details-button-right  p-t-5">
-        <button mat-raised-button (click)="raiseRfq()"
-          class="main-background-color main-button color-white">
-          Raise RFQ
-        </button>
-      </div>
+    </mat-card> -->
+
+    <div class="text-right add-user-details-button-right  p-t-5">
+      <button mat-raised-button (click)="raiseRfq()" class="main-background-color main-button color-white">
+        Raise RFQ
+      </button>
+    </div>
     <div *ngIf="buttonName === 'materialWise'; else elseBlock">
       <app-material-wise [materialData]="globalStoreData[0].data"></app-material-wise>
     </div>
