--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -1,34 +1,32 @@
 <mat-accordion displayMode="flat" multi class="mat-table">
   <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
     <span class="mat-header-cell" mat-sort-header="vesselName">Name</span>
-    <span class="mat-header-cell" mat-sort-header="vesselId"
-      >Estimated Quantity</span
-    >
-    <span class="mat-header-cell" mat-sort-header="vesselStatus"
-      >Requested Quantity</span
-    >
+    <span class="mat-header-cell" mat-sort-header="vesselId">Estimated Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="vesselStatus">Requested Quantity</span>
     <span class="mat-header-cell" mat-sort-header="ircs">Required Date</span>
-    <span class="mat-header-cell" mat-sort-header="ircs"
-      >Available quantity in project</span
-    >
+    <span class="mat-header-cell" mat-sort-header="ircs">Available quantity in project</span>
   </section>
-  <mat-expansion-panel *ngFor="let project of newProjectData"  class="myPanel">
+  <mat-expansion-panel *ngFor="let project of newProjectData" class="myPanel">
     <mat-expansion-panel-header class="mat-row material-row">
       <span class="mat-cell">{{ project.ProjectGlobal.projectName }}</span>
     </mat-expansion-panel-header>
-    <mat-expansion-panel *ngFor="let material of project.GlobalMaterials"  class="myPanel">
+    <mat-expansion-panel *ngFor="let material of project.GlobalMaterials" class="myPanel">
       <mat-expansion-panel-header class="mat-row material-project">
         <span class="mat-cell" matTooltip=" {{ material.GlobalMaterial.materialName }}">
-           <div class="limited-character">
-                {{ material.GlobalMaterial.materialName }}
-            </div> 
-          </span>
-        <span class="mat-cell">{{ material.GlobalMaterial.estimatedQty }}</span>
-        <span class="mat-cell">{{ material.GlobalMaterial.sum }}</span>
+          <div class="limited-character">
+            {{ material.GlobalMaterial.materialName }}
+          </div>
+        </span>
+        <span class="mat-cell">{{ material.GlobalMaterial.estimatedQty }} <span
+            class="p-l-5">{{material.GlobalMaterial.materialUnit}}</span></span>
+        <span class="mat-cell">{{ material.GlobalMaterial.sum }} <span
+            class="p-l-5">{{material.GlobalMaterial.materialUnit}}</span></span>
         <span class="mat-cell">{{
           material.GlobalMaterial.nearDueDate | date: "dd MMM yyy"
         }}</span>
-        <span class="mat-cell">{{ material.GlobalMaterial.availableQty }}</span>
+        <span
+          class="mat-cell">{{ material.GlobalMaterial.deliveredQty!=null&&material.GlobalMaterial.issuedQty!=null?material.GlobalMaterial.deliverdQty-material.GlobalMaterial.issuedQty:0 }}
+          <span class="p-l-5">{{material.GlobalMaterial.materialUnit}}</span></span>
       </mat-expansion-panel-header>
       <ng-container *ngIf="material.IndentMaterial">
         <div *ngFor="let indent of material.IndentMaterial">
