--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -82,7 +82,7 @@
                 <ng-container matColumnDef="ViewPo">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'requiredApproval']">view po</a>
+                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'requiredApproval']">View po</a>
                   </td>
                 </ng-container>
 
@@ -136,7 +136,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="PO Amount">
-                  <th mat-header-cell *matHeaderCellDef class="text-align-right">PO Amount</th>
+                  <th mat-header-cell *matHeaderCellDef class="text-align-right">PO Amount (Rs)</th>
                   <td mat-cell *matCellDef="let element" class="text-align-right">
                     {{ element.poAmount }}
                   </td>
@@ -146,8 +146,8 @@
                   <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                   <td mat-cell *matCellDef="let element" class="text-align-center">
                     <a href="javascript:void(0)"
-                      [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'edit']">view
-                      po</a>
+                      [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'edit']">View
+                      Po</a>
                   </td>
                 </ng-container>
 
@@ -205,7 +205,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="PO Amount">
-                  <th mat-header-cell *matHeaderCellDef class="text-align-right">PO Amount</th>
+                  <th mat-header-cell *matHeaderCellDef class="text-align-right">PO Amount(Rs)</th>
                   <td mat-cell *matCellDef="let element" class="text-align-right">
                     {{ element.poAmount }}
                   </td>
@@ -215,8 +215,8 @@
                   <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
                     <a href="javascript:void(0)"
-                      [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'view']">view
-                      po</a>
+                      [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'view']">View
+                      Po</a>
                   </td>
                 </ng-container>
 
