--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -14,10 +14,10 @@
                     <span class="mat-header-cell">Makes</span>
                     <span class="mat-header-cell">Supplier Rate</span>
                     <span class="mat-header-cell">Awarded quantity</span>
-                    <span class="mat-header-cell">Amount</span>
+                    <span class="mat-header-cell">Amount(Rs)</span>
                     <span class="mat-header-cell">GST %</span>
-                    <span class="mat-header-cell">GST Amount</span>
-                    <span class="mat-header-cell">Total Amount with GST</span>
+                    <span class="mat-header-cell">GST Amount(Rs)</span>
+                    <span class="mat-header-cell">Total Amount with GST(Rs)</span>
                 </section>
                 <div *ngFor="let material of poTableData; let m = index" [formGroupName]="m">
                     <div class="mat-row">
