--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -1,7 +1,7 @@
 <div class="page-start-point ">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
         <div class="row">
-            <div class="col-xs-12 text-right">
+            <div class="col-xs-12 text-right p-b-10 p-t-5">
                 <span class="p-r-5">
                     <button mat-raised-button class="main-background-color main-button color-white"
                         (click)="goBack(stepper)" type="button">Back</button>
