--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="projectSelectedMaterials" [formGroup]="materialForms">
+<form *ngIf="projectSelectedMaterials.length" [formGroup]="materialForms">
     <div class="row ">
         <div class="col-xs-12 text-right p-t-10 border-input">
             <span class="p-r-20">
@@ -78,7 +78,7 @@
                     <ng-container matColumnDef="Makes">
                         <th mat-header-cell *matHeaderCellDef>Makes</th>
                         <td mat-cell *matCellDef="let element; let  i= index">
-                            <app-chip
+                            <app-chip [chips]="element.makes"
                                 (onUpdate)="makesUpdate($event, (i +  (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)))">
                             </app-chip>
                         </td>
