--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -7,10 +7,16 @@
                 <mat-icon>search</mat-icon>
             </button>
         </mat-form-field>
-
-        <button class="main-background-color round-button full-border m-t-5 m-r-15 p-r-10"
+        <!-- <a class="main-color"
+        (click)="openDialog( this.rfqData.rfqProjectsList[0].projectId)">
+        <i class="material-icons addSupplier">
+            add
+        </i> <span class="p-b-10">Add Supplier</span>
+    </a> -->
+        <button mat-raised-button class="main-background-color main-button color-white m-r-15"
             (click)="openDialog( this.rfqData.rfqProjectsList[0].projectId)">
-            <mat-icon class="color-white m-t-5">add</mat-icon>
+            <!-- <mat-icon class="color-white m-t-5">add</mat-icon> -->
+            <i class="material-icons addSupplier">add</i> Supplier
         </button>
         <!-- <button mat-raised-button [disabled]="!selectedSupplierFlag" (click)="navigateToUploadPage()"
             class="main-background-color main-button color-white">
@@ -18,7 +24,7 @@
         </button> -->
     </div>
 </div>
-<form *ngIf="allSuppliers" [formGroup]="supplierForm">
+<form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
     <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" formArrayName="forms"
         class="mat-elevation-z8 col-sm-12">
         <!-- Supplier Name Column -->
@@ -55,18 +61,6 @@
                 <button mat-button class="display-flex pull-right ">
                     <mat-icon class="main-color">delete_outline</mat-icon>
                 </button>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="customColumn1">
-            <th mat-header-cell *matHeaderCellDef> <a class="main-color"
-                    (click)="openDialog( this.rfqData.rfqProjectsList[0].projectId)">
-                    <i class="material-icons addSupplier">
-                        add
-                    </i> <span class="p-b-10">Add Supplier</span>
-                </a></th>
-            <td mat-cell *matCellDef="let element">
-
             </td>
         </ng-container>
 
