--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,4 +1,3 @@
-<!-- <fix-header></fix-header> -->
 <form [formGroup]="form" (ngSubmit)="submit()">
   <div class="page-start-point">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
@@ -16,7 +15,7 @@
           <div class="row m-b-10">
             <div class="col-md-3">
               <mat-form-field class="border-input">
-                <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="RFQ Name" />
+                <input class="p-b-10" matInput type="text" formControlName="rfqName" placeholder="*RFQ Name" />
               </mat-form-field>
             </div>
             <div class="col-md-4">
