--- a/src/app/shared/dialogs/select-po-role/selectPoRole.html
+++ b/src/app/shared/dialogs/select-po-role/selectPoRole.html
@@ -2,11 +2,11 @@
        <div class="row">
            <div class="col-xs-12 text-right">
                <span *ngIf="this.data.roleType==='projectUserId'; else billing">
-                   Choose Project Person
+                   Select Project Contact Person
                </span>
                <ng-template #billing>
                    <span>
-                       Choose Billing Person
+                       Select Project Contact Person
                    </span>
                </ng-template>
            </div>
@@ -15,7 +15,7 @@
        <div class="row">
            <table mat-table [dataSource]="approverData" class="mat-elevation-z8 col-sm-12">
                <ng-container matColumnDef="User Name">
-                   <th mat-header-cell *matHeaderCellDef> UserName </th>
+                   <th mat-header-cell *matHeaderCellDef> User </th>
                    <td mat-cell *matCellDef=" let element;let i=index">
                        <mat-radio-group name="aprrover" aria-labelledby="example-radio-group-label"
                            class="example-radio-group" formControlName="approver">
@@ -48,7 +48,7 @@
            </table>
            <div class="p-t-10 m-0-auto">
                <button mat-raised-button class="main-background-color main-button color-white" (click)="selectRole()">
-                   {{this.data.roleType==="projectBillingUserId"?"Billing Person":"Project Person"}}
+                   Select"}}
                </button>
            </div>
 
