--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -201,7 +201,7 @@
                 }}
                     </div>
 
-                    <div class="show-detail-supplier" *ngIf="element.supplierList.length>0">
+                    <div class="show-detail-supplier" *ngIf="element.supplierList">
                       <img src="../../../../assets/images/i_icon.png">
                       <div id="detail-supplier">
                         <div class="row">
