raise rfq text and link changed

--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -35,8 +35,8 @@
     </mat-card> -->
 
     <div class="text-right add-user-details-button-right  p-t-5">
-      <button mat-raised-button (click)="raiseRfq()" class="main-background-color main-button color-white">
-        Raise RFQ
+      <button mat-raised-button (click)="createRfq()" class="main-background-color main-button color-white">
+        Create RFQ
       </button>
     </div>
     <div *ngIf="buttonName === 'materialWise'; else elseBlock">
